--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,4 +54,16 @@ jobs:
         #path: path/to/your/build/output  # Change to the path where your build artifacts are
     # - name: Deploy or other actions
       # You can add additional steps here, like deploying to a server or publishing to npm
+
+  #     - name: Snyk
+  # # You may pin to the exact commit or the version.
+  # # uses: snyk/actions@b98d498629f1c368650224d6d212bf7dfa89e4bf
+  # uses: snyk/actions@0.4.0
+  # with:
+  #   # Which Snyk command to run, defaults to test
+  #   command: # optional, default is test
+  #   # Additional arguments to pass to Snyk
+  #   args: # optional
+  #   # Output a snyk.json file with results if running the test command
+  #   json: # optional
      
