--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   mavenbuild:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest 
     steps:
     - uses: actions/checkout@v3
     - name: Build with Maven
       run: |
         cd backend
         mvn -B package --file pom.xml
-        sudo cp -r /home/fs-swapnil/actions-runner/_work/curd/curd/backend/target/fullstack-0.0.1-SNAPSHOT.war /opt/tomcat/webapps
+        # sudo cp -r /home/fs-swapnil/actions-runner/_work/curd/curd/backend/target/fullstack-0.0.1-SNAPSHOT.war /opt/tomcat/webapps
 
   reactBuild:
-      runs-on: self-hosted
+      runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
         - name: Use Node.js
@@ -30,7 +30,11 @@ jobs:
             cd frontend/react-frontend
             npm install
              CI='' npm run build
-             sudo cp -r /home/fs-swapnil/actions-runner/_work/curd/curd/frontend/react-frontend/build /var/www/html
+             # sudo cp -r /home/fs-swapnil/actions-runner/_work/curd/curd/frontend/react-frontend/build /var/www/html
+          
+            
+            
+            
             #npm run build
   # frontenddeploy:
   #    needs: reactBuild
